增加mybatis自动生成代码插件,及通用mapper方法插件

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,8 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 #\u5141\u8BB8\u9A7C\u5CF0
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
+#mapper
+#mappers \u591A\u4E2A\u63A5\u53E3\u65F6\u9017\u53F7\u9694\u5F00
+mapper.mappers=com.majun.exam.base.util.BaseMapper
+mapper.not-empty=false
+mapper.identity=MYSQL
