--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
 			<version>2.0.1</version>
 		</dependency>
 
+		<!--pagehelper 分页插件-->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
