--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,9 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 mapper.mappers=com.majun.exam.base.util.BaseMapper
 mapper.not-empty=false
 mapper.identity=MYSQL
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
