--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -32,7 +32,7 @@ spring.datasource.filters=stat,wall,log4j
 #\u6307\u5B9Abean\u6240\u5728\u5305
 mybatis.type-aliases-package=com.majun.exam.pojo
 #\u6307\u5B9A\u6620\u5C04\u6587\u4EF6
-mybatis.mapperLocations=classpath:mapper/*.xml
+mybatis.mapperLocations=classpath:mapper/*.xml,classpath:mapper/expand/*.xml
 #\u5141\u8BB8\u9A7C\u5CF0
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
