--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 ## \u6570\u636E\u5E93\u8BBF\u95EE\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://192.168.99.100:32807/exam?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url = jdbc:mysql://localhost:13306/exam?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username = root
-spring.datasource.password = 123456
+spring.datasource.password = root
 
 # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
 # \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
