--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.majun</groupId>
 	<artifactId>exam</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>exam</name>
 	<description>Demo project for Spring Boot</description>
@@ -112,7 +112,41 @@
 			<version>${poi.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<!--<scope>provided</scope>-->
+		</dependency>
+
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.23.1</version>
+		</dependency>
+
 	</dependencies>
+
+	<profiles>
+		<!-- 开发/测试环境，默认激活 -->
+		<profile>
+			<id>dev</id>
+			<properties>
+				<env>dev</env>
+				<env.active>dev</env.active>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault><!--默认启用的是dev环境配置-->
+			</activation>
+		</profile>
+		<!-- 生产环境 -->
+		<profile>
+			<id>online</id>
+			<properties>
+				<env>online</env>
+				<env.active>online</env.active>
+			</properties>
+		</profile>
+	</profiles>
 
 	<build>
 		<plugins>
@@ -131,16 +165,16 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.5</version>
 				<dependencies>
-					<!--配置这个依赖主要是为了等下在配置mybatis-generator.xml的时候可以不用配置classPathEntry这样的一个属性，避免代码的耦合度太高-->
+					&lt;!&ndash;配置这个依赖主要是为了等下在配置mybatis-generator.xml的时候可以不用配置classPathEntry这样的一个属性，避免代码的耦合度太高&ndash;&gt;
 					<dependency>
-						<groupId>mysql</groupId>
-						<artifactId>mysql-connector-java</artifactId>
-						<version>5.1.46</version>
+						<groupId>org.xerial</groupId>
+						<artifactId>sqlite-jdbc</artifactId>
+						<version>3.23.1</version>
 					</dependency>
 					<dependency>
 						<groupId>tk.mybatis</groupId>
@@ -158,14 +192,14 @@
 					</execution>
 				</executions>
 				<configuration>
-					<!--允许移动生成的文件 -->
+					&lt;!&ndash;允许移动生成的文件 &ndash;&gt;
 					<verbose>true</verbose>
-					<!-- 是否覆盖 -->
+					&lt;!&ndash; 是否覆盖 &ndash;&gt;
 					<overwrite>true</overwrite>
-					<!-- 自动生成的配置 -->
+					&lt;!&ndash; 自动生成的配置 &ndash;&gt;
 					<configurationFile>src/main/resources/mybatis-generator.xml</configurationFile>
 				</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
