--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,7 @@
 ## \u6570\u636E\u5E93\u8BBF\u95EE\u914D\u7F6E
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:13306/exam?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.driver-class-name = org.sqlite.JDBC
+spring.datasource.url = jdbc:sqlite::resource:identifier.sqlite
 
 # \u4E0B\u9762\u4E3A\u8FDE\u63A5\u6C60\u7684\u8865\u5145\u8BBE\u7F6E\uFF0C\u5E94\u7528\u5230\u4E0A\u9762\u6240\u6709\u6570\u636E\u6E90\u4E2D
 # \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
@@ -47,3 +45,6 @@ pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
+
+#\u968F\u673A\u9898\u76EE\u6570\u91CF
+question.num=10
