--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-spring.profiles.active=dev
+spring.profiles.active=@env.active@
 server.port=9080
-
-#\u968F\u673A\u9898\u76EE\u6570\u91CF
-question.num=10
